added edit and update to bwcontroller

--- a/app/views/birdwatchers/show.html.erb
+++ b/app/views/birdwatchers/show.html.erb
@@ -1,1 +1,4 @@
+<div class="notice"><%= flash[:notice] %></div>
+<%= link_to 'Edit Birdwatcher', edit_birdwatcher_path(@birdwatcher) %>
+<br>
 <%= link_to 'Log Out', logout_path, method: :delete %>
