--- a/app/views/birdwatchers/show.html.erb
+++ b/app/views/birdwatchers/show.html.erb
@@ -1,4 +1,19 @@
+<h1><%= @birdwatcher.name %>'s Page</h1>
+<h3>Your Sightings</h3>
+<ul>
+    <% @birdwatcher.sightings.each do |sighting| %>
+        <li><%= link_to sighting.bird.common_name, birdwatcher_sighting_path(@birdwatcher, sighting) %></li>
+    <% end %>
+</ul>
+<% if @birdwatcher.ornithologist %>
+    <p>Ornithologists Only</p>
+    <%= link_to 'Create New Bird', new_bird_path %>
+<% end %>
+<%= link_to 'Create New Sighting', new_birdwatcher_sighting_path(@birdwatcher)%>
+<br>
+<%= link_to 'Home Page', root_path %>
+<br>
 <div class="notice"><%= flash[:notice] %></div>
-<%= link_to 'Edit Birdwatcher', edit_birdwatcher_path(@birdwatcher) %>
+<%= link_to 'Edit Your Profile', edit_birdwatcher_path(@birdwatcher) %>
 <br>
 <%= link_to 'Log Out', logout_path, method: :delete %>
