--- a/app/views/birdwatchers/show.html.erb
+++ b/app/views/birdwatchers/show.html.erb
@@ -1,5 +1,9 @@
 <h1><%= @birdwatcher.name %>'s Page</h1>
-<h3>Your Sightings</h3>
+<% if current_user == @birdwatcher %>
+    <h3>Your Sightings</h3>
+<% else %>
+    <h3><%= @birdwatcher.name %>'s Sightings</h3>
+<% end %>
 <ul>
     <% @birdwatcher.sightings.each do |sighting| %>
         <li><%= link_to sighting.bird.common_name, birdwatcher_sighting_path(@birdwatcher, sighting) %></li>
@@ -9,6 +13,7 @@
     <p>Ornithologists Only</p>
     <%= link_to 'Create New Bird', new_bird_path %>
 <% end %>
+<br>
 <%= link_to 'Create New Sighting', new_birdwatcher_sighting_path(@birdwatcher)%>
 <br>
 <%= link_to 'Home Page', root_path %>
