--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,10 @@
     <h4>Navigation</h4>
     <%= link_to 'Home Page', root_path %>
     <br>
-    <%= link_to 'Your Profile', birdwatcher_path(current_user) %>
-    <br>
+    <% if logged_in? %>
+      <%= link_to 'Your Profile', birdwatcher_path(current_user) %>
+      <br>
+    <% end %>
     <%= link_to 'Birdwatchers Index', birdwatchers_path %>
     <br>
     <%= link_to 'Birds Index', birds_path %>
