build sightings functionality and views

--- a/app/views/birds/show.html.erb
+++ b/app/views/birds/show.html.erb
@@ -20,5 +20,5 @@
 <% if current_user.ornithologist %>
     <p>Ornithologists Only</p>
     <p><%= link_to "Edit Bird", edit_bird_path(@bird) %></p>
-    <p><%= link_to "Delete Bird", bird_path(@bird), method: :delete %></p>
+    <p><%= link_to 'Delete Bird', bird_path(@bird), method: :delete, data: {confirm: "Are you sure?"} %></p>
 <% end %>
